[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for our code:
[profile.dev]
opt-level = 1
